# Cheetah-Software

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.cmake
common/: CMakeLists.txt  DownloadProject.cmake
common/FootstepPlanner/: CMakeLists.txt  GraphSearch.cpp  GraphSearch.h
common/include/: Types.h  cTypes.h  cppTypes.h
common/include/Collision/: Collision.h  CollisionBox.h  CollisionMesh.h  CollisionPlane.h  ContactConstraint.h  ContactImpulse.h  ContactSpringDamper.h  collision_model.h
common/include/ControlParameters/: ControlParameterInterface.h  ControlParameters.h  RobotParameters.h  SimulatorParameters.h
common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  FootSwingTrajectory.h  GaitScheduler.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
common/include/Dynamics/: ActuatorModel.h  Cheetah3.h  DynamicsSimulator.h  FloatingBaseModel.h  MiniCheetah.h  Quadruped.h  SpatialInertia.h  spatial.h
common/include/Math/: FirstOrderIIRFilter.h  Interpolation.h  MathUtilities.h  orientation_tools.h
common/include/SimUtilities/: GamepadCommand.h  IMUTypes.h  ImuSimulator.h  SimulatorMessage.h  SpineBoard.h  VisualizationData.h  ti_boardcontrol.h
common/include/SparseCMPC/: SparseCMPC.h
common/include/Utilities/: BSplineBasic.h  BezierCurve.h  EdgeTrigger.h  PeriodicTask.h  SegfaultHandler.h  SharedMemory.h  Timer.h  Utilities_print.h  filters.h  pseudoInverse.h  save_file.h  utilities.h
common/src/Collision/: CollisionBox.cpp  CollisionMesh.cpp  CollisionPlane.cpp  ContactConstraint.cpp  ContactImpulse.cpp  ContactSpringDamper.cpp
common/src/ControlParameters/: ControlParameterInterface.cpp  ControlParameters.cpp
common/src/Controllers/: ContactEstimator.cpp  DesiredStateCommand.cpp  FootSwingTrajectory.cpp  GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
common/src/Dynamics/: DynamicsSimulator.cpp  FloatingBaseModel.cpp  Quadruped.cpp
common/src/SimUtilities/: ImuSimulator.cpp  SpineBoard.cpp  ti_boardcontrol.cpp
common/src/SparseCMPC/: OsqpTriples.cpp  SparseCMPC.cpp  SparseCMPC_Math.cpp
common/src/Utilities/: PeriodicTask.cpp  SegfaultHandler.cpp  Utilities_print.cpp  filters.cpp  save_file.cpp  utilities.cpp
common/test/: test_ControlParameters.cpp  test_ImuSimulator.cpp  test_Ipopt.cpp  test_JCQP.cpp  test_LegController.cpp  test_actuatorModel.cpp  test_casadi.cpp  test_cheetah3_model.cpp  test_contact.cpp  test_dynamics.cpp  test_filters.cpp  test_footswing.cpp  test_goldfarb.cpp  test_math.cpp  test_mini_cheetah_model.cpp  test_orientation_tools.cpp  test_osqp.cpp  test_periodic_tasks.cpp  test_sharedMemory.cpp  test_spatial.cpp  test_spline.cpp  test_utilities.cpp  test_yaml.cpp  wo_test_spline.cpp
common/test/python_plot/: plot_curve.py  plot_spline.py  plot_spline_1d.py  plot_spline_opt.py
rc_test/: CMakeLists.txt  rc_test_main.cpp
robot/: CMakeLists.txt
robot/Controllers/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerWrapper.cpp  BalanceControllerWrapper.h
robot/FSM_States/: FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_ImpedanceControl.cpp  FSM_State_ImpedanceControl.h  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_StandUp.cpp  FSM_State_StandUp.h
robot/WBC/: CMakeLists.txt  ContactSpec.hpp  Task.hpp  WBC.hpp
robot/WBC/WBIC/: WBIC.cpp  WBIC.hpp
robot/WBC/WBLC/: CMakeLists.txt  KinWBC.cpp  KinWBC.hpp  WBLC.cpp  WBLC.hpp
robot/WBC_States/: CMakeLists.txt  Cheetah_DynaCtrl_Definition.h  Controller.hpp  StateProvider.cpp  StateProvider.hpp  Test.cpp  Test.hpp
robot/WBC_States/BackFlip/: BackFlipTest.cpp  BackFlipTest.hpp  DataReader.cpp  DataReader.hpp
robot/WBC_States/BodyCtrl/: BodyCtrlTest.cpp  BodyCtrlTest.hpp  BodyPostureCtrl.cpp  BodyPostureCtrl.hpp
robot/WBC_States/Bounding/: BoundingTest.cpp  BoundingTest.hpp
robot/WBC_States/JPosCtrl/: JPosCtrlTest.cpp  JPosCtrlTest.hpp
robot/WBC_States/WBICTrot/: Path.hpp  WBICTrotTest.cpp  WBICTrotTest.hpp
robot/WBC_States/config/: INTERFACE_setup.yaml  ROBOT_test_setup.yaml  TEST_backflip_mini_cheetah.yaml  TEST_body_ctrl_cheetah3.yaml  TEST_body_ctrl_mini_cheetah.yaml  TEST_jpos_ctrl.yaml  TEST_wbic_trot_mini_cheetah.yaml
robot/WBC_States/python_plot/: plot_body.py  plot_body_imu.py  plot_foot.py  plot_torque.py
robot/include/: ControlFSM.h  ControlFSMData.h  HardwareBridge.h  JPosInitializer.h  RobotController.h  RobotRunner.h  SafetyChecker.h  SimulationBridge.h  TransitionData.h  main.h  main_helper.h
robot/include/rt/: rt_ethercat.h  rt_interface_lcm.h  rt_rc_interface.h  (+5 more)
robot/src/: ControlFSM.cpp  HardwareBridge.cpp  HardwareInterface.cpp  JPosInitializer.cpp  RobotController.cpp  RobotRunner.cpp  SafetyChecker.cpp  SimulationBridge.cpp  main.cpp  main_helper.cpp
scripts/lcm-log2smat/: CMakeLists.txt  Makefile  README.md  find_qt_path.sh
sim/: CMakeLists.txt
sim/include/: Checkerboard.h  Colors.h  DrawList.h  GameController.h  Graphics3D.h  JoystickTest.h  RobotInterface.h  SimControlPanel.h  Simulation.h  obj_loader.h  sim_utilities.h
sim/src/: Checkerboard.cpp  DrawList.cpp  GameController.cpp  Graphics3D.cpp  JoystickTest.cpp  JoystickTest.ui  MiniCheetahDebug.cpp  MiniCheetahDebug.h  MiniCheetahDebug.ui  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  main.cpp  obj_loader.cpp  sim_utilities.cpp
user/ControllerBridge/: CMakeLists.txt  ControllerBridge.cpp  ControllerBridge.h  main.cpp
user/JPos_Controller/: CMakeLists.txt  JPosUserParameters.h  JPos_Controller.cpp  JPos_Controller.hpp  main.cpp
user/MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  MIT_Controller.hpp  MIT_UserParameters.h  main.cpp
user/MiniCheetahSpi_Controller/: CMakeLists.txt  MiniCheetahSpi_Controller.cpp  MiniCheetahSpi_Controller.h  main.cpp
user/WBC_Controller/: CMakeLists.txt  WBC_Controller.cpp  WBC_Controller.hpp  main.cpp
(+3931 files in other folders)
